	+ Changes: Behaviour of slideshow mode modified
	+ Changes: Open in fullscreen only if there are images passed to mirage
	+ Changes: Should work correctly on vertical dual monitor setups. Patch by
		"dorian"
	+ Changes: middle-mouse click now toggles zoom between 1:1 and fit to window.
	+ Features: Can now browse between subfolders
	+ Features: Double-click to enter leave fullscreen

v0.9.5.2 - February 13, 2011
	+ Added ukrainian translation
	+ Bug: Screenshot did not work correctly
	+ Bug: Fixed a bug in the use of keymodifiers

v0.9.5.1 - July 23, 2010
	+ Added dutch translation
	+ Bug: Mirage showed verbose output by default
	+ Bug: Misplaced parenthesis in Open Remote Image dialog code
	+ Changes: Fixed translations again...
	
v0.9.5 - July 20, 2010
	+ Added a windows icon
	+ Added new shortcuts PgUP/PgDN for previous/next image
	+ Added option to disable the backgroundcolor in windowed mode
	+ Bug: & in custom actions caused an error when mirage tried to open custom
		action dialog (bug #17329)
	+ Bug: Save image didn't work. (bug #17330)
	+ Bug: Fixed gettext files not found if installed into /usr/local (bug #17359)
	+ Changes: now uses $XDG_CONFIG_HOME/mirage as config directory if possible
		(patch taken from debian)
	+ Changes: Switched zooming directions for Ctrl+Mousewheel up/down.
	+ Changes: Small interface changes
	+ Changes: Updated mnemonics (bug #17350 and patch 3020)
	+ Changes: Improvements to localized strings
	
v0.9.4 - June 26, 2010
	+ Mirage now requires PyGTK 2.12.0
	+ Added the ability to set the quality for saving images
	+ Added windows support
	+ Fixed DeprecationWarnings for old tooltip API in pygtk
	+ Fixed DeprecationWarnings for md5
	+ Prevent toolbar from getting focus on keypresses
	+ Bug: Fix returning from fullscreen mode with no images displayed
	+ Bug: delete_image() could cause some thumbnails to not get loaded
	+ Bug: If a image modified image was deleted mirage would ask to save the image